objects/Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account Name is auto populated based on the associated opportunity if the opportunity field is filled in</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Initiatives</relationshipLabel>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account_Name__r.Owner.FirstName + ' ' + Account_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please be aware of the new user access, to whom you are assigning. Once it is assigned to new user you no longer will be able to edit the initiative</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Initiatives</relationshipLabel>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Opportunity_Name__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiative_Status__c</fullName>
        <label>Initiative Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiative_Type__c</fullName>
        <label>Initiative Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cross-Selling</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Initiatives</relationshipLabel>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_To_Step_Process_State__c</fullName>
        <label>Step To Step Process State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Listen &amp; Learn</fullName>
                </value>
                <value>
                    <fullName>Create Curiosity</fullName>
                </value>
                <value>
                    <fullName>Build Everything Together</fullName>
                </value>
                <value>
                    <fullName>Gain Approval</fullName>
                </value>
                <value>
                    <fullName>Land &amp; Expand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Initiative</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Initiative_Type__c</columns>
        <columns>Step_To_Step_Process_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Initiative_Status__c</columns>
        <columns>Initiative_Type__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Contact__c</columns>
        <columns>Step_To_Step_Process_State__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>